# bit_ops

./: .travis.yml  CMakeLists.txt  appveyor.yml
include/boost/: bit_ops.hpp
include/boost/bit_ops/: counting.hpp  pow2.hpp  rotating.hpp
include/boost/bit_ops/counting/: countl_one.hpp  countl_zero.hpp  countr_one.hpp  countr_zero.hpp  popcount.hpp
include/boost/bit_ops/detail/: config.hpp  int_sizes.hpp
include/boost/bit_ops/detail/type_traits/: enable_if.hpp  integral_constant.hpp  is_enum.hpp  is_integral.hpp  is_signed.hpp  is_unsigned.hpp  make_unsigned.hpp  underlying_type.hpp
include/boost/bit_ops/pow2/: bit_ceil.hpp  bit_floor.hpp  bit_width.hpp  has_single_bit.hpp  is_power_of_2.hpp
include/boost/bit_ops/rotating/: rotl.hpp  rotr.hpp
test/test_cmake/: CMakeLists.txt  main.cpp
